feat: implement middlewares & users private endpoints
